# py-core

./: README.md  requirements.txt  setup.cfg  setup.py
py_core/config/: dump_config.py  manager.py
py_core/pretty/: __init__.py
