[metadata]
version = 0.0.1
long_description = file: README.md
url = https://github.com/Hafnernuss/py-core
author = Philipp Hafner
author_email = philipp@hafner.xyz
license = MIT
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
[options]
include_package_data = true
python_requires = >=3.8

